# evilevo

./: .gitignore  .gitmodules  README.md  TEST_VIRUSES.md  cai_calculator.py  pyproject.toml
docs/: DETECTOR.md  UI.md
evil_evo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evo2/: download_model.sh  infer_evo2_example_output.txt  infer_evo2_help.txt  misc_analytics_post_train.ipynb  preprocess_config.yml  preprocess_config_docker.yml  train_cmd.sh  train_data_config.yml
evo2/preprocess/: filter_data.ipynb  ncbi_viruses_homo_sapiens_uint8_byte-level_test.idx  ncbi_viruses_homo_sapiens_uint8_byte-level_train.idx  ncbi_viruses_homo_sapiens_uint8_byte-level_val.idx
evo2/webapi/: README.md  app.py
libs/viruses_classifier/: __init__.py  __main__.py  classifier.py  compat.py  constants.py  loader.py
libs/viruses_classifier/libs/: get_feature_indices.py  read_sequence.py  sequence_processing.py
src/: api.py  test_2.txt  test_sequence.txt
src/detector/: API_README.md  api.py  test_sequence.txt
src/detector/layer1/: download_dbc.py  layer1_blast.py
src/detector/layer2/: README.md  layer2_interproscan.py
src/layer1/: DBC_README.md  __init__.py  download_dbc.py  layer1_blast.py
src/layer2/: layer2_virus_host.py
src/layer3/: __init__.py  cai_calculator.py
webapp/: package-lock.json  package.json  vite.config.js
webapp/src/: App.jsx  index.css
webapp/src/components/: Button.jsx  Layout.jsx  Navbar.jsx
webapp/src/pages/: Generate.jsx  Landing.jsx  Upload.jsx
(+29 files in other folders)
