[project]
name = "evil-evo"
version = "0.1.0"
description = "Fine-tuned Evo2 1b on eukaryotic viruses and platform for synthesis companies to detect malicious genomes"
dependencies = [
    "biopython>=1.86",
    "ncbi-genome-download>=0.3.3",
    "transformer-engine>=2.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evo2", "detector"]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = false
